fix: moved the antd dark mode to tailwind

--- a/src/index.css
+++ b/src/index.css
@@ -9,17 +9,12 @@
   color-scheme: light;
 }
 
-html.dark {
-  color-scheme: dark;
-}
-
 html,
 body,
 #root {
   margin: 0;
   padding: 0;
   min-height: 100vh;
-  background-color: var(--color-holy-white);
 }
 
 #root {
@@ -27,11 +22,6 @@ body,
   flex-direction: column;
 }
 
-.dark html,
-.dark body,
-.dark #root {
-  background-color: #0f172a !important;
-}
 
 body {
   background-color: var(--color-holy-white);
